添加用户删除接口
